--- a/corrections.tex
+++ b/corrections.tex
@@ -438,7 +438,9 @@ not seen.
 \textbf{The initial conditions for the second order perturbations are set in Section 7.2.2 on Pg
 105. It was suggested that these conditions introduce a spurious homogeneous solution into the
 final solution for $\dvp2$ as shown in Fig 8.2. What follows is an analysis of the homogeneous
-solution and the chosen initial conditions.}
+solution and the chosen initial conditions showing that, for the initial conditions we have
+chosen, the homogeneous solution is zero at all times. This discussion has been added as
+Appendix~\ref{sec:init-apx}.}
 
 The homogeneous equation for the second order perturbations is  
 % 
@@ -547,6 +549,14 @@ solution is identically zero throughout the evolution. This has also been shown 
 solving \eq{eq:homogen-corr} using a Runge-Kutta scheme and the background values for
 $\H$ and $\vp+0$.
 
+
+\textbf{The following note has been added to the main text in Section~7.2.2 on Pg 106:}
+
+In addition, the perturbations in the far past are supposed to have been purely Gaussian and
+so at this time the second order perturbation would be zero. 
+With this choice of initial conditions for $\dvp2$ the homogeneous part of the solution of
+\eq{eq:KG2-fourier-sr-ntime} can be calculated as done in Appendix~\ref{sec:init-apx}. The result
+is that the homogeneous part of the solution is zero for all times.
 
 %  
 
