Mairi Point 1: Added note about short corrections to corrections chapter. Slightly changed first correction to make reading easier. Added chapter heading to corrections chapter.

--- a/corrections.tex
+++ b/corrections.tex
@@ -1,4 +1,23 @@
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\chapter{Corrections and Changes Made}
+\label{ch:corr}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+
+In the following list of changes made, the section numbers and page numbers refer to the original
+text as quoted in the correction sheet and could have changed in the latest version of the text.
+
+
 \section{Mairi's Corrections}
+
+\subsection{Point 1: Short corrections}
+\textbf{Most of the changes have been made. 
+In the case of one of the corrections the notation $K_1,K_2,K_3$ was to be changed to
+$k_1,k_2,k_3$. However the $K_i$ as used refer to the range of $k$ values in the simulation and
+not to individual $k_i$ values so this has not been changed.}
 
 \subsection{Point 2: Drawbacks of Inflation}
 \textbf{Added to discussion on Pg 36:}
