--- a/shortintro.tex
+++ b/shortintro.tex
@@ -177,8 +177,9 @@ The Klein-Gordon equations are the central governing equations of the
 calculation described in Chapter~\ref{ch:numericalsystem}. They must first be
 rewritten in a form more suitable for numerical work. This involves changing the
 time coordinate to the number of elapsed e-foldings and writing the convolution
-terms in spherical polar coordinates. Four different single field, slow roll
-potentials will be investigated. The parameters for these models are set by
+terms in spherical polar coordinates. Four different 
+potentials will be investigated, each of which has a single field which is slowly rolling. The
+parameters for these models are set by
 comparing
 the calculated power spectrum of first order scalar perturbations with the latest
 WMAP data. The initial conditions for the background field and perturbations must
