Mairi Point 17: Added major parts to discussion. Also changed labels on equations to allow introduction into main thesis.

--- a/appendix.tex
+++ b/appendix.tex
@@ -440,7 +440,8 @@ plotted in Figures~\ref{fig:eta-apx} and \ref{fig:eta-zoom-apx}.
  \centering
  \includegraphics[width=0.75\textwidth]{numerical/graphs/epsilon_slowroll-large.pdf}
  % epsilon_slowroll-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
- \caption{The value of $\varepsilon_H$ for the four potentials.}
+ \caption[Value of $\varepsilon_H$ for the Four Potentials]{The value of $\varepsilon_H$ for
+the four potentials.}
  \label{fig:eps-apx}
 \end{figure}
 
@@ -448,7 +449,8 @@ plotted in Figures~\ref{fig:eta-apx} and \ref{fig:eta-zoom-apx}.
  \centering
  \includegraphics[width=0.75\textwidth]{numerical/graphs/epsilon_slowroll_zoom-large.pdf}
  % epsilon_slowroll-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
- \caption{The value of $\varepsilon_H$ for the four potentials at early times.}
+ \caption[Value of $\varepsilon_H$ for the Four Potentials at Early Times]{The value of
+$\varepsilon_H$ for the four potentials at early times.}
  \label{fig:eps-zoom-apx}
 \end{figure}
 
@@ -465,7 +467,8 @@ models, the magnitude of $S$ after horizon crossing for these models is very sim
  \centering
  \includegraphics[width=0.75\textwidth]{numerical/graphs/eta_slowroll-large.pdf}
  % epsilon_slowroll-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
- \caption{The value of $\eta_H$ for the four potentials.}
+ \caption[Value of $\eta_H$ for the Four Potentials]{The value of $\eta_H$ for the four
+potentials.}
  \label{fig:eta-apx}
 \end{figure}
 
@@ -473,7 +476,8 @@ models, the magnitude of $S$ after horizon crossing for these models is very sim
  \centering
  \includegraphics[width=0.75\textwidth]{numerical/graphs/eta_slowroll_zoom-large.pdf}
  % epsilon_slowroll-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
- \caption{The value of $\eta_H$ for the four potentials at early times.}
+ \caption[Value of $\eta_H$ for the Four Potentials at Early Times]{The value of $\eta_H$ for the
+four potentials at early times.}
  \label{fig:eta-zoom-apx}
 \end{figure}
 
@@ -490,7 +494,8 @@ in $|S|$ at early times as seen in Figure~\ref{fig:cmp-src-zoom-kwmap}.
  \centering
  \includegraphics[width=0.75\textwidth]{numerical/graphs/cos_keta_kwmap_zoom-large.pdf}
  % cos_keta_kwmap_zoom-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
- \caption{The real part of the phase in the Bunch Davies initial conditions for the four different
+ \caption[Real Part of the Phase at Early Times]{The real part of the phase in the Bunch Davies
+initial conditions for the four different
 potentials at early times.}
  \label{fig:cos-keta-apx}
 \end{figure}
