--- a/corrections.tex
+++ b/corrections.tex
@@ -14,7 +14,7 @@ text as quoted in the correction sheet and could have changed in the latest vers
 \section{Mairi's Corrections}
 
 \subsection{Point 1: Short corrections}
-\textbf{Most of the changes have been made. 
+\textbf{The changes have been made. 
 In the case of one of the corrections the notation $K_1,K_2,K_3$ was to be changed to
 $k_1,k_2,k_3$. However the $K_i$ as used refer to the range of $k$ values in the simulation and
 not to individual $k_i$ values so this has not been changed.}
@@ -53,7 +53,7 @@ Suppose we have a string theory compactified on a circle of radius $L$. The ``T-
 transformation which relates two physical theories with this one compactified dimension is
 % 
 \begin{equation}
-\label{eq:tdualtransform-dbiintro}
+\label{eq:tdualtransform-corr}
  L \rightarrow \wt{L} = \frac{\alpha'}{L}\,.
 \end{equation}
 % 
@@ -127,7 +127,7 @@ For single field models no mixing
 of adiabatic and non-adiabatic modes occurs \cite{Weinberg200804}. Therefore, throughout this
 thesis we will only consider adiabatic perturbations and ignore any isocurvature mode present.
 
-\subsection{Point 6: Assumptions leading to $r<10^{-7}$}
+\subsection{Point 6: Assumptions leading to \texorpdfstring{$r<10^{-7}$}{r<10**-7}}
 \textbf{Added to Section 4.2 on Pgs 54 and 55:}
 
 
@@ -151,7 +151,7 @@ going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbo
 restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
 constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
 
-\subsection{Point 7: Discussion of $Y^{p,q}$}
+\subsection{Point 7: Discussion of \texorpdfstring{$Y^{p,q}$}{Y**p,q}}
 \textbf{Added to Section 4.3 on Pg 57:}
 
 Previously only two five-dimensional Sasaki-Einstein
@@ -178,7 +178,7 @@ approach and consider the following kinetic function which has a more general fo
 but still contains a square root term:
 % 
 \begin{equation}
-\label{eq:genaction-dbi}
+\label{eq:genaction-corr}
 P= -f_A (\varphi ) \sqrt{1-f_B (\varphi ) X} -f_C (\varphi) \,,
 \end{equation}
 % 
@@ -218,14 +218,14 @@ The sound speed of fluctuations in
 the inflaton, defined in \eq{eq:defcs-dbiintro}, is then given by
 %  
 \begin{equation}
-\label{eq:cs-dbi}
+\label{eq:cs-corr}
 \cs = \sqrt{1-f_B X} = \frac{f_Af_B}{2} \frac{1}{P_{,X}}  \,,
 \end{equation}
 % 
 and the scalar power spectrum \eqref{eq:Ps-dbiintro} by
 % 
 \begin{equation}
-\label{eq:spectrum-dbi}
+\label{eq:spectrum-corr}
 \Pr = \frac{1}{2\pi^2}\frac{H^4}{f_Af_B\dot{\varphi}^2}  \,.
 \end{equation}
 
@@ -241,7 +241,7 @@ non-canonical actions. For the more general kinetic function
 \eqref{eq:genaction-dbi}, the BM bound becomes
 % 
 \begin{equation}
-\label{eq:bmboundgen-dbi}
+\label{eq:bmboundgen-corr}
  r < \frac{32}{N(\Neff)^2}\cs\PX = \frac{16}{N(\Neff)^2}f_A f_B \,.
 \end{equation}
 % 
@@ -255,7 +255,7 @@ of $f_Af_B = 2 \cs\PX$ is negligible during that epoch, we can use
 \eq{eq:approxlyth-dbiintro} which states that 
 % 
 \begin{equation}
-\label{eq:genphivary1}
+\label{eq:genphivary1-corr}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^2_{*} \simeq 
 \frac{(\Delta \N_{*} )^2}{8} \left(\frac{r}{\cs\PX}\right)_*  
 = \frac{(\Delta \N_{*} )^2}{4} \left(\frac{r}{f_A f_B}\right)_*  \,.
@@ -268,7 +268,7 @@ must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. It follows from \eqs{eq:bmbound
 \eqref{eq:genphivary1}, therefore, that 
 % 
 \begin{equation}
-\label{eq:genBMbound}
+\label{eq:genBMbound-corr}
 r_*< \frac{32}{N (\Delta \N_{*})^2} (\cs\PX)_* = \frac{16}{N (\Delta \N_{*})^2}
 (f_Af_B)_* \,.
 \end{equation}
@@ -317,7 +317,7 @@ The generalised BM bound for IR models, with branes propagating towards the bulk
 \eq{eq:f2IRlower}:
 % 
 \begin{equation}
-\label{eq:f2IRlower-multi}
+\label{eq:f2IRlower-corr}
 \frac{f_2\Mpl^4}{N} > \frac{(\Delta \N_*)^2}{4\pi^2}
 \frac{\sqrt{-3\fnleq}}{(1-n_s)\Pr}  \,.
 \end{equation}
@@ -326,7 +326,7 @@ As we know $f_2$, this may be expressed as
 a limit on the value of the warp factor $h(\varphi_*)$ on CMB scales: 
 % 
 \begin{equation}
-\label{eq:warptorelax}
+\label{eq:warptorelax-corr}
 N T_3 \left(\frac{h_*}{\Mpl}\right)^4 < 
 \frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnleq}(\Delta \N_*)^2} \,.
 \end{equation}
@@ -341,7 +341,7 @@ Condition (\ref{eq:warptorelax}) therefore reduces to a constraint on the
 value of the inflaton during observable inflation: 
 % 
 \begin{equation}
-\label{eq:phivalue-dbi}
+\label{eq:phivalue-corr}
 \frac{\varphi_*^4}{\Mpl^4} < 
 \frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnleq} ( \Delta \N_*)^2} 
 \frac{T_3 L^4}{N} \,.
@@ -362,7 +362,7 @@ which implies an upper limit on the
 ${\rm D3}$-brane charge: 
 % 
 \begin{equation}
-\label{eq:Nlimit-dbi}
+\label{eq:Nlimit-corr}
 N< \frac{64\pi^5 \gs (1-n_s)\Pr}{\sqrt{-3\fnleq} ( \Delta \N_*)^2}
 \left( \frac{\Mpl}{h_{\rm cut} \ms} \right)^4   \,.
 \end{equation}
@@ -387,7 +387,7 @@ For an $AdS_5$ throat, the fuzzy potential $W$ is a constant,
 and the condition that $W \gg 1$ becomes 
 % 
 \begin{equation}
-\label{eq:Chatlimit}
+\label{eq:Chatlimit-corr}
 \hat{C} \ll \frac{4\pi^2\gs N}{\mathrm{Vol}(X_5)} \,.
 \end{equation}
 % 
@@ -395,7 +395,7 @@ Hence, combining inequalities
 (\ref{eq:Nlimit-dbi}) and (\ref{eq:Chatlimit}) implies that
 %  
 \begin{equation}
-\label{eq:nlimit-dbi}
+\label{eq:nlimit-corr}
 \hat{C} \ll 
 \frac{2 (2\pi)^7 (1-n_s)\Pr}{\sqrt{-3\fnleq} ( \Delta \N_*)^2}
 \frac{\gs^2}{\mathrm{Vol} (X_5) }
@@ -412,7 +412,7 @@ $\mathrm{Vol}(X_5) \simeq \pi^3$ then yields the limit
  or equivalently,
 %   
 \begin{equation}
-\label{eq:nbound-multi}
+\label{eq:nbound-corr}
 n \ll 225.
 \end{equation}
 % 
@@ -470,7 +470,7 @@ The homogeneous equation for the second order perturbations is
 \end{equation}
 % 
 During slow roll, with the slow roll variables $\varepsilon_H$ and $\eta_H$ defined in
-Chapter~\ref{ch:mainintro}, this becomes
+Chapter~\ref{ch:introduction}, this becomes
 % 
 \begin{equation}
  \dvp2'' + 2\H \dvp2' + \left[k^2 + 3\H^2(\eta_H + \varepsilon_H)\right]\dvp2 = 0\,.
@@ -692,8 +692,120 @@ As far as the implementation of the code is concerned, the extension to the non-
 field case is the next step.
 
 
+\subsection{Point 17: Elaborate in conclusions and future research directions}
+
+\textbf{Substantial additions have been made to the discussion in Chapter~9. The main changes are
+listed below.}
+
+\textbf{Changes and additions to discussion on Pg 142:}
+
+In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
+the upper bound on the tensor-scalar ratio. By considering a DBI-type action with unspecified field
+functions,
+$f_i$, we showed that the generalised lower and upper bounds can be consistent
+if the product of $f_A$ and $f_B$ is sufficiently large on observable scales. This provides a guide
+to the types of models which could evade the inconsistency of the bounds on $r$. For more general
+models with a non-canonical action, a bound on $r$ which relates the geometry of the throat, the
+number of e-foldings of observable inflation, and the derivatives of the action has been derived in
+\eq{eq:LHbound}. This bound, although it does not in general relate to observational quantities can
+be used when the details of a particular physical model are known.
+
+The discovery of the incompatible bounds on $r$ for DBI inflation has had a noticeable
+impact on the research community, spurring interest in finding models which evade
+these bounds. Many such models have been proposed with varying degrees of success. In
+Section~\ref{sec:others-dbi} these were categorised according to whether they
+featured single or multiple fields, and single or multiple branes. Some of these models are still
+constrained by the bounds on $r$ but not to the same extent as the standard DBI scenario. For
+example the parameter space of the models with wrapped brane configurations is still extremely
+limited by the observational values from WMAP5 \cite{Alabidi:2008ej}. For other models an analysis
+in terms of the bounds derived in this thesis has yet to be undertaken. As the observational limits
+on $\fnleq$ and $r$ continue to improve, an important step in ensuring the validity of DBI based
+models is to check whether equivalent bounds to those derived here exist, and whether they can be
+met for any significant proportion of the parameter space.
+
+
+\textbf{Added to discussion on Pg 143:}
+
+On the other hand, the choice of $r>10^{-4}$ as the threshold of an observable signal is very
+optimistic. If foreground removal techniques and the signal-to-noise ratios of future experiments
+cannot reach this threshold, and instead reach $r>10^{-3}$, no number of branes will be able to
+produce an observable tensor signal when combined with the current limits on the non-Gaussianity.
+There will then be little possibility of a distinguishing
+observational signature for these coincident brane models.
+
+\textbf{Changes and additions to discussion on Pg 144:}
+
+The main observable quantity is not however the second order scalar perturbation, but rather the
+departure from Gaussianity in the CMB temperature map, parametrised by the amplitude of the
+bispectrum of the perturbations. In Section~\ref{sec:observable-perts} we outlined how $\fnl$ could
+be calculated from the numerically found $\dvp2$ both for the local type and more generally using
+the bispectrum of the uniform density curvature perturbation. As the observational limits on $\fnl$
+are tightened over the course of the remaining WMAP releases and future Planck data, the importance
+of comparing the predictions for $\fnl$ of inflationary models with the observed values will only
+increase. In this thesis we have not computed $\fnl$ for the models we have considered, but this is
+an important future step that will be undertaken.
+ 
+\ldots
+
+The initial conditions for the second order perturbations are taken to be $\dvp2=0$ and
+$\dN{\dvp2}=0$ as described in Section~\ref{sec:initconds-num}. For this choice of initial
+conditions the homogeneous part of the solution of the second order equation is zero at all times.
+As the perturbations are supposed to become more Gaussian the further back in time they are
+considered, in the limit of the far past the second order perturbations should be zero. It remains
+to be investigated whether the choice of initialisation time is sufficiently far in the past for
+this assumption to be accurate. At first order it is known that the perturbations are well
+ approximated by the Bunch-Davies vacuum initial conditions even just a few e-foldings before
+horizon crossing. However, this choice of initialisation time may not be the most appropriate for
+the second order perturbations. In future work it would be worth considering whether the analytic
+Green's function solution for $\dvp2$ at very early times could be integrated until the numerical
+initialisation time and used as the initial condition for the perturbation. 
+
+To test the code, four different, large field, monomial potentials were used. These were the
+standard quadratic and quartic potentials, a fractional index potential derived from the monodromy
+string inflation model and a toy model in which inflation is stopped by hand and a blue spectrum is
+produced.
+Each potential depends on a single parameter, which was fixed by comparing the resultant scalar
+curvature power spectrum with the WMAP5 normalisation. The slow roll
+approximation can be applied to all four potentials. These potentials are not meant to represent an
+exhaustive survey of single field slow roll models but are sufficiently different to exhibit
+different power spectra and second order source terms.
+
+\ldots
+
+The four different potentials have similar amplitudes before horizon crossing but reach different
+values after horizon crossing. The differences in the slow roll parameters for each potential are
+compared with the source term values in Appendix~\ref{sec:apx-srcdisc}. The slow roll parameters
+do not appear to be directly related to the amplitudes of the source terms, at least in a linear
+fashion.
+
+
+\textbf{Changes and additions to discussion on Pg 146:}
+
+
+Another consideration in the development of a numerical system is the possibility of
+code re-use. One of our future goals is to develop our code into a numerical toolkit which
+can be applied to a variety of physical situations.
+The equations of motion of the inflaton scalar field are similar in form
+to the governing equations of other important cosmological phenomena. Therefore, it
+should be possible to adapt the numerical system we have constructed and apply it to
+other areas of interest. The form of the second order equation and source term are similar to those
+applicable in the evolution of tensor perturbations and the
+generation of vorticity in the early universe. The flexibility of the numerical system we have
+developed will be a positive factor in any attempt to apply our code to these physical systems. 
+
+\ldots
+
+When the extension to non slow-roll models
+is complete, it will be possible to investigate models with a step or other feature in their
+potential. These models can exhibit large amounts of non-Gaussianity produced around the feature
+with a shape dependence that is more general than that of the local and equilateral forms.
+
+
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Kazuya's Corrections}
-\subsection{Point 1: How are constraints on $r$ obtained}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\subsection{Point 1: How are constraints on \texorpdfstring{$r$}{r} obtained}
 \textbf{Added to discussion in Section 2.4 on Pg 32:}
 
 The detection of B-mode polarisation would provide definitive proof of the existence of primordial
@@ -710,7 +822,7 @@ $n_s$ but with no spectral running the bound is $r<0.43$. When BAO and SN data i
 WMAP5 data the bound on the tensor to scalar ratio becomes
 % 
 \begin{equation}
-\label{eq:rbound-intro}
+\label{eq:rbound-corr}
  r < 0.20\,,
 \end{equation}
 at the 95\% confidence level. 
@@ -757,7 +869,7 @@ real space. Equilateral non-Gaussianity is produced by higher derivative terms w
 are inside the horizon. It is generated by models which have non-canonical actions.
 
 
-\subsection{Point 3: Physical meaning of $\fnl$}
+\subsection{Point 3: Physical meaning of \texorpdfstring{$\fnl$}{fNL}}
 \textbf{Added to discussion in Section 2.6 on Pg 34:}
 
 We use the WMAP sign convention for $\fnl$ throughout. 
@@ -767,7 +879,7 @@ positive $\fnl$ implies a decrease in temperature in the CMB compared to the Gau
 can be seen by noting that at linear order the temperature anisotropy in the CMB can be related to
 the curvature perturbation by $\mathcal{R}_\mathrm{G}\simeq -5 \Delta T/T$.
 
-\subsection{Point 4: State $\cs\ll 1$ clearly}
+\subsection{Point 4: State \texorpdfstring{$\cs\ll 1$}{cs<<1} clearly}
 \textbf{Added to discussion on Pg 46:}
 We will assume throughout Part~\ref{part:dbi} of this thesis that motion takes
 place in the relativistic limit in which $\cs\ll1$.
@@ -864,7 +976,7 @@ potentials at early times.}
 \subsection{Point 8: Check analytic solution}
 
 \subsection{Point 9: Add more explanation for why code was developed, and explain how
-you would calculate \texorpdfstring{$\fnl$}{f_NL}}
+you would calculate \texorpdfstring{$\fnl$}{fNL}}
 
 \textbf{Explanation for code; Added to the discussion of the numerical code in Section~8.4 on Pg
 138:}
