--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -371,7 +371,7 @@ manifold $X_5$ is taken to be $\mathcal{O}(\pi^3)$ in keeping with the values fo
 The WMAP5 normalisation of the scalar perturbation power spectrum has also been used. Finally, in
 going from \eq{eq:upperbound} to the final numerical figure in \eq{eq:standardbound} the most
 ``optimistic'' value, $\Delta \N_*\simeq 1$, has been chosen as this leads to the least
-restrictive bound on $r$.  As described above a more realistic value of $4$ would severly
+restrictive bound on $r$.  As described above a more realistic value of $4$ would severely
 constrain $r$ due to the strong dependence of \eq{eq:upperbound} on $\Delta\N_*$.
 % 
 % 
@@ -557,7 +557,7 @@ quadratic inflaton potential \cite{bmpaper}.
 As noted in Refs.~\cite{bmpaper} and \cite{bean}, condition 
 \eqref{eq:upperboundvol} may be achieved 
 if $X_5$ corresponds to a $Y^{p,q}$ space. Previously only two five-dimensional Sasaki-Einstein
-metrics were explicity known, $S^5$ and $T^{1,1}$ on $S^2\times S^3$. The $Y^{p,q}$ metrics
+metrics were explicitly known, $S^5$ and $T^{1,1}$ on $S^2\times S^3$. The $Y^{p,q}$ metrics
 described in \Rref{gauntlett} are a countably infinite number of Sasaki-Einstein metrics on
 $S^2\times S^3$. The metrics are parametrised by the two topological numbers $p$ and $q$, which are
 coprime when the $Y^{p,q}$ is topologically $S^2\times S^3$. The volume of one of these manifolds
