Minor corrections to point info.

--- a/corrections.tex
+++ b/corrections.tex
@@ -888,7 +888,7 @@ place in the relativistic limit in which $\cs\ll1$.
 \textbf{See Point 8 above.}
 
 \subsection{Point 6: Initial conditions}
-\textbf{See point 12 above.}
+\textbf{See Point 12 above.}
 
 \subsection{Point 7: Plot slowroll parameters and try to explain Fig 8.13}
 
@@ -974,6 +974,7 @@ potentials at early times.}
 \end{figure}
 
 \subsection{Point 8: Check analytic solution}
+\textbf{This change has not been completed yet.}
 
 \subsection{Point 9: Add more explanation for why code was developed, and explain how
 you would calculate \texorpdfstring{$\fnl$}{fNL}}
